End footer and End project

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -5,6 +5,7 @@ $font-text: "Roboto Slab", serif;
 
 $background-color: #f7f7f7;
 $color-subtitle: #777777;
+$social-media-color: #222222;
 
 *,
 *::before,
@@ -206,15 +207,62 @@ header {
 	width: 100%;
 }
 
+// FOOTER
+
+footer .col-md-4 {
+	width: 30%;
+}
+
+.footer-copyrights {
+	color: $color-subtitle;
+	font-family: $font-title;
+	font-size: 14px;
+	letter-spacing: -0.35px;
+}
+
+.social-media-list {
+	display: inline-flex;
+	list-style: none;
+	justify-content: center;
+	padding: 0
+}
+
+.social-media-icon {
+	width: 40px;
+	height: 40px;
+	border: 1px solid $social-media-color;
+	background-color: $social-media-color;
+	border-radius: 50%;
+	margin: 0 0.4rem;
+	position: relative;
+}
+
+.fa-brands {
+	color: white;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+}
+
 // RWD
 
-@media (max-width: 719px) {
+@media (max-width: 767px) {
 	.portfolio-items .card {
 		width: 45%;
 	}
 
 	.services-items .card {
 		width: 100%;
+	}
+
+	footer .col-md-4 {
+		width: 100%;
+	}
+
+	.footer-copyrights {
+		margin: auto;
+		padding-bottom: 1rem;
 	}
 }
 
